--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "eslintConfig": {
     "extends": "react-app"
   },
+  "homepage": "https://ekmst1027.github.io/nomflix",
   "browserslist": {
     "production": [
       ">0.2%",
