--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "api": "^0.0.1",
     "axios": "^0.18.1",
     "gh-pages": "^2.2.0",
     "prop-types": "^15.7.2",
